[package]
name = "xl"
version = "0.1.8"
edition = "2018"
license = "MIT"
description = "A package to let you process *big* Excel files very quickly"
repository = "https://github.com/xlprotips/xl/"

[dependencies]
zip = "7.0.0"
quick-xml = "0.38.4"
chrono = "0.4.42"

[lib]
name = "xl"
path = "src/lib.rs"

[[bin]]
name = "xlcat"
path = "src/main.rs"
